    separate plugin.
  * Add support for network ethernet devices using device tree
    aliases, e.g. `endX`.
  * Replace the cron-apt package with unattended-upgrades.
    This will take care that security updates will be installed
    automatically.
  * The `apt-listchanges` package will send you an email with
    a summary of the latest changes whenever packages are
    upgraded.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Jul 2023 13:17:39 +0200

openmediavault (6.9.11-2) stable; urgency=low

  * Fix issue in NFS configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 20 Dec 2023 19:36:08 +0100

openmediavault (6.9.10-5) stable; urgency=low

  * Add omv-release-upgrade to allow users to migrate their
    systems to OMV7 (Sandworm) which is based on Debian 12
    (Bookworm).
  * Add UTF8 support for creating SSL certs via UI.
  * Add email to SSL certificate's SAN in its own field.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 08 Dec 2023 11:48:57 +0100

openmediavault (6.9.9-1) stable; urgency=low

  * Configure exports only for enabled NFS versions.
  * Enhance database query to prevent an error when trying
    to run a SMART scheduled task via UI.
  * Fix bug in Avahi configuration.
  * Issue #485: Display device temperatures in the SMART
    dashboard widget.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Nov 2023 23:53:24 +0100

openmediavault (6.9.8-1) stable; urgency=low

  * Display RPI CM4 CPU model in system information.
  * Fix an error in the weekly cron job that is downloading the
    SMART database.
  * Hardening `omv-sfsnapadm` by skipping snapshots with invalid
    naming schema.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 12 Nov 2023 17:40:53 +0100

openmediavault (6.9.7-3) stable; urgency=low

  * Various improvements.
  * Prevent the creation of Btrfs snapshots from snapshots.
  * Do not delete Btrfs snapshots that are used as shared folders.