@@ -11,6 +11,8 @@ openmediavault (7.0-23) unstable; urgency=low
   * The `apt-listchanges` package will send you an email with
     a summary of the latest changes whenever packages are
     upgraded.
+  * Issue #1649: Rearrange the `Storage | Shared Folders | ACL`
+    page.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Jul 2023 13:17:39 +0200
 
